# CryptoBTCMonitor

./: .dockerignore  .gitignore  01_create_exchange_table.sql  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: cicd.yml
src/cryptobtcmonitor/core/: logger.py  settings.py
src/cryptobtcmonitor/data/: exchange_data.py  get_exchange_insert_query.py  sampledata.json
src/cryptobtcmonitor/postgres/: 01-create-exchange-table.sql  01_create_exchange_table.sql  create-exchange-table.sql  docker_pgadmin_servers.json
src/cryptobtcmonitor/utils/: database.py  database_config.py
src/cryptobtcmonitor/workflow/: create_deployment.py  taskflow.py
src/cryptobtcmonitor_test/fixtures/: data-exchange-sample.csv
src/cryptobtcmonitor_test/unit/: test_exchange_data_workflow.py
